[package]
name = "ahqstore-sdk"
version = "0.0.0"
edition = "2024"
authors = [
  "A. Chakraborty (ahqsoftwares) <ahqsecret@gmail.com>",
  "AHQ Store Contributors (@ahqstore)",
]
license = "MIT"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
semver = "1"
serde = { version = "1", features = ["derive"] }
ureq = { version = "3", features = ["json"] }

[features]
default = ["abi"]
# Exports C abi wrapper
abi = []
